<package>
 <name>ras_group8_localization</name>
  <version>0.1.0</version>
  <description>
    Localization package.
  </description>
  <license>BSD</license>

  <url type="website">https://github.com/RAS17-Group-8/ras_group8_localization</url>

  <maintainer email="seb.lindberg@gmail.com">Sebastian Lindberg</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>phidgets</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>bfl</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>


  <run_depend>roscpp</run_depend>
  <run_depend>phidgets</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>bfl</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
</package>

